devtools/client/netmonitor/src/assets/styles/netmonitor.css
/* ... */
.
requests
-
list
-
timings
-
division
{
display
:
inline
-
block
;
padding
-
inline
-
start
:
4px
;
font
-
size
:
75
%
;
pointer
-
events
:
none
;
text
-
align
:
start
;
}
:
root
[
platform
=
"
win
"
]
.
requests
-
list
-
timings
-
division
{
padding
-
top
:
1px
;
font
-
size
:
90
%
;
}
.
requests
-
list
-
timings
-
division
:
not
(
:
first
-
child
)
{
border
-
inline
-
start
:
1px
dashed
;
}
.
requests
-
list
-
timings
-
division
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
-
division
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
theme
-
dark
.
requests
-
list
-
timings
-
division
{
border
-
inline
-
start
-
color
:
#
5a6169
!
important
;
}
.
theme
-
light
.
requests
-
list
-
timings
-
division
{
border
-
inline
-
start
-
color
:
#
585959
!
important
;
}
.
requests
-
list
-
timings
-
division
[
data
-
division
-
scale
=
second
]
.
requests
-
list
-
timings
-
division
[
data
-
division
-
scale
=
minute
]
{
font
-
weight
:
600
;
}
.
requests
-
list
-
timings
{
display
:
flex
;
flex
:
none
;
align
-
items
:
center
;
transform
:
scaleX
(
var
(
-
-
timings
-
scale
)
)
;
}
.
requests
-
list
-
timings
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
requests
-
list
-
timings
-
box
{
display
:
inline
-
block
;
height
:
9px
;
}
.
theme
-
firebug
.
requests
-
list
-
timings
-
box
{
background
-
image
:
linear
-
gradient
(
rgba
(
255
255
255
0
.
3
)
rgba
(
0
0
0
0
.
2
)
)
;
height
:
16px
;
}
.
requests
-
list
-
timings
-
box
.
blocked
{
background
-
color
:
var
(
-
-
timing
-
blocked
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
dns
{
background
-
color
:
var
(
-
-
timing
-
dns
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
connect
{
background
-
color
:
var
(
-
-
timing
-
connect
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
ssl
{
background
-
color
:
var
(
-
-
timing
-
ssl
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
send
{
background
-
color
:
var
(
-
-
timing
-
send
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
wait
{
background
-
color
:
var
(
-
-
timing
-
wait
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
receive
{
background
-
color
:
var
(
-
-
timing
-
receive
-
color
)
;
}
.
requests
-
list
-
timings
-
total
{
display
:
inline
-
block
;
padding
-
inline
-
start
:
4px
;
font
-
size
:
85
%
;
font
-
weight
:
600
;
white
-
space
:
nowrap
;
transform
:
scaleX
(
var
(
-
-
timings
-
rev
-
scale
)
)
;
}
.
requests
-
list
-
timings
-
total
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
-
total
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
request
-
list
-
item
{
display
:
table
-
row
;
height
:
24px
;
}
.
request
-
list
-
item
.
selected
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
}
.
request
-
list
-
item
:
not
(
.
selected
)
.
odd
{
background
-
color
:
var
(
-
-
table
-
zebra
-
background
)
;
}
.
request
-
list
-
item
:
not
(
.
selected
)
:
hover
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
-
hover
)
;
}
.
request
-
list
-
item
.
fromCache
>
.
requests
-
list
-
column
:
not
(
.
requests
-
list
-
waterfall
)
{
opacity
:
0
.
6
;
}
.
theme
-
firebug
.
request
-
list
-
item
:
not
(
.
selected
)
:
hover
{
background
:
#
EFEFEF
;
}
.
network
-
details
-
panel
-
toggle
:
dir
(
ltr
)
:
:
before
.
network
-
details
-
panel
-
toggle
.
pane
-
collapsed
:
dir
(
rtl
)
:
:
before
{
background
-
image
:
var
(
-
-
theme
-
pane
-
collapse
-
image
)
;
}
.
network
-
details
-
panel
-
toggle
.
pane
-
collapsed
:
dir
(
ltr
)
:
:
before
.
network
-
details
-
panel
-
toggle
:
dir
(
rtl
)
:
:
before
{
background
-
image
:
var
(
-
-
theme
-
pane
-
expand
-
image
)
;
}
.
network
-
details
-
panel
{
width
:
100
%
;
height
:
100
%
;
overflow
:
hidden
;
}
.
panel
-
container
{
height
:
100
%
;
}
.
panel
-
container
.
properties
-
view
{
display
:
flex
;
flex
-
direction
:
column
;
overflow
-
x
:
hidden
;
overflow
-
y
:
auto
;
}
.
properties
-
view
{
flex
-
grow
:
1
;
}
.
properties
-
view
.
searchbox
-
section
{
flex
:
0
1
auto
;
}
.
properties
-
view
.
devtools
-
searchbox
{
padding
:
0
;
}
.
properties
-
view
.
devtools
-
searchbox
input
{
margin
:
1px
3px
;
}
.
devtools
-
checkbox
{
position
:
relative
;
vertical
-
align
:
middle
;
bottom
:
1px
;
}
.
devtools
-
checkbox
-
label
{
margin
-
inline
-
start
:
10px
;
margin
-
inline
-
end
:
3px
;
white
-
space
:
nowrap
;
}
.
empty
-
notice
{
color
:
var
(
-
-
theme
-
body
-
color
-
inactive
)
;
padding
:
3px
8px
;
text
-
align
:
center
;
display
:
flex
;
align
-
items
:
center
;
justify
-
content
:
center
;
height
:
100
%
;
font
-
size
:
24px
;
}
.
textbox
-
input
{
text
-
overflow
:
ellipsis
;
border
:
none
;
background
:
none
;
color
:
inherit
;
width
:
100
%
;
}
.
textbox
-
input
:
focus
{
outline
:
0
;
box
-
shadow
:
var
(
-
-
theme
-
focus
-
box
-
shadow
-
textbox
)
;
}
.
tree
-
container
.
tree
-
container
.
treeTable
{
position
:
relative
;
height
:
100
%
;
width
:
100
%
;
overflow
:
auto
;
flex
:
1
;
}
.
tree
-
container
.
treeTable
.
tree
-
container
.
treeTable
tbody
{
display
:
flex
;
flex
-
direction
:
column
;
}
.
tree
-
container
.
treeTable
tbody
{
height
:
calc
(
100
%
-
4px
)
;
}
.
tree
-
container
.
treeTable
tr
{
display
:
block
;
position
:
relative
;
}
.
tree
-
container
.
treeTable
td
:
last
-
child
{
width
:
100
%
;
}
.
properties
-
view
.
devtools
-
searchbox
.
tree
-
container
.
treeTable
.
tree
-
section
{
width
:
100
%
;
background
-
color
:
var
(
-
-
theme
-
toolbar
-
background
)
;
}
.
tree
-
container
.
treeTable
tr
.
tree
-
section
:
not
(
:
first
-
child
)
td
:
not
(
[
class
=
"
"
]
)
{
border
-
top
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
}
/* ... */

